[project]
name = "mcp-claw-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.137.1",
    "fastapi-mcp>=0.4.0",
    "httpx",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "uvicorn>=0.49.0",
    "youtube-search>=2.2.0",
    "youtube-transcript-api>=1.2.4",
]
